traces/bug_84.txt
examples++-load/bmo.cpp:100: error: DEAD_STORE
  The value written to &f0 (type double) is never used.
Showing all 1 steps of the trace


examples++-load/bmo.cpp:100:3: Write of unused value
98.     
99.     f = finit;
100.     f0 = finit;
         ^
101.     xopt1=xoptg=vinit;
102.     if (finit < epsij) {
